--- a/models/01_contexto/01_contexto.ipynb
+++ b/models/01_contexto/01_contexto.ipynb
@@ -61,31 +61,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e5ddd9e",
-   "metadata": {},
-   "source": [
-    "# Estrategia de elección\n",
-    "\n",
-    "1. Entrena varios modelos base con hiperparámetros estándar.\n",
-    "\n",
-    "2. Evalúa métricas cruzadas (ROC-AUC, F1, Accuracy, Recall).\n",
-    "\n",
-    "3. Aplica validación cruzada (StratifiedKFold) → mide consistencia.\n",
-    "\n",
-    "4. Observa overfitting:\n",
-    "  - Si el rendimiento en entrenamiento >> test → reducir complejidad o regularizar.\n",
-    "\n",
-    "5. Elige el modelo con:\n",
-    "  - AUC alto (>0.85)\n",
-    "  - Gap pequeño entre entrenamiento y test\n",
-    "  - Métricas estables entre folds\n",
-    "\n",
-    "6. Si hay empate:\n",
-    "  - Prefiere el modelo más simple e interpretable."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "dd7481ec",
    "metadata": {},
    "source": [
@@ -100,14 +75,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "893fc842",
+   "id": "ee402d00",
    "metadata": {},
    "source": [
-    "Gradient Boosting (mejor AUC y Recall)\n",
+    "# Seleccionar el modelo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43f27258",
+   "metadata": {},
+   "source": [
+    "### Definir métrica de desempeño\n",
     "\n",
-    "Random Forest (muy robusto y explicable)\n",
+    "Del dataset se puede evidenciar una clasificación binario de clases desbalanceadas entre 80/20, lo cual indica que no solo con accuracy (si estuvieran balanceadas las clases sí) se puede medir el modelo.\n",
     "\n",
-    "Regresión Logística (referencia base e interpretable)"
+    "| Tipo de métrica | Métrica                            | Descripción                                                                   | Cuándo usar                                                               |\n",
+    "| --------------- | ---------------------------------- | ----------------------------------------------------------------------------- | ------------------------------------------------------------------------- |\n",
+    "| **Globales**    | **Accuracy**                       | Porcentaje de predicciones correctas.                                         | Solo útil si el dataset está balanceado (no es el caso aquí).             |\n",
+    "| **Por clase**   | **Precision (Positive Class)**     | Qué proporción de los predichos como “Exit” realmente se fueron.              | Si te preocupa **falsos positivos** (decir que alguien se irá cuando no). |\n",
+    "|                 | **Recall (Sensitivity / TPR)**     | Qué proporción de los clientes que se fueron fueron correctamente detectados. | Si te preocupa **no detectar los que sí se van**.                         |\n",
+    "|                 | **F1-Score**                       | Media armónica entre precisión y recall.                                      | Buen equilibrio cuando hay **clases desbalanceadas**.                     |\n",
+    "| **Curvas**      | **ROC-AUC**                        | Mide la capacidad general del modelo para separar ambas clases.               | Métrica global para comparar modelos.                                     |\n",
+    "| **Ranking**     | **PR-AUC (Precision-Recall AUC)**  | Similar al ROC-AUC pero más informativo en datasets desbalanceados.           | Recomendado aquí.                                                         |\n",
+    "| **Negocio**     | **Lift / Gain / Confusion Matrix** | Para medir impacto de campañas o predicciones.                                | En análisis de churn real.                                                |\n"
    ]
   }
  ],
