Regresion mejorada con métricas

--- a/models/01_contexto/01_contexto.ipynb
+++ b/models/01_contexto/01_contexto.ipynb
@@ -90,15 +90,34 @@
     "\n",
     "Del dataset se puede evidenciar una clasificación binario de clases desbalanceadas entre 80/20, lo cual indica que no solo con accuracy (si estuvieran balanceadas las clases sí) se puede medir el modelo.\n",
     "\n",
-    "| Tipo de métrica | Métrica                            | Descripción                                                                   | Cuándo usar                                                               |\n",
-    "| --------------- | ---------------------------------- | ----------------------------------------------------------------------------- | ------------------------------------------------------------------------- |\n",
-    "| **Globales**    | **Accuracy**                       | Porcentaje de predicciones correctas.                                         | Solo útil si el dataset está balanceado (no es el caso aquí).             |\n",
-    "| **Por clase**   | **Precision (Positive Class)**     | Qué proporción de los predichos como “Exit” realmente se fueron.              | Si te preocupa **falsos positivos** (decir que alguien se irá cuando no). |\n",
-    "|                 | **Recall (Sensitivity / TPR)**     | Qué proporción de los clientes que se fueron fueron correctamente detectados. | Si te preocupa **no detectar los que sí se van**.                         |\n",
-    "|                 | **F1-Score**                       | Media armónica entre precisión y recall.                                      | Buen equilibrio cuando hay **clases desbalanceadas**.                     |\n",
-    "| **Curvas**      | **ROC-AUC**                        | Mide la capacidad general del modelo para separar ambas clases.               | Métrica global para comparar modelos.                                     |\n",
-    "| **Ranking**     | **PR-AUC (Precision-Recall AUC)**  | Similar al ROC-AUC pero más informativo en datasets desbalanceados.           | Recomendado aquí.                                                         |\n",
-    "| **Negocio**     | **Lift / Gain / Confusion Matrix** | Para medir impacto de campañas o predicciones.                                | En análisis de churn real.                                                |\n"
+    "Métricas recomendadas para evaluación\n",
+    "\n",
+    "Accuracy: porcentaje de aciertos global.\n",
+    "\n",
+    "Precision: exactitud de los positivos predichos.\n",
+    "\n",
+    "Recall (Sensibilidad): capacidad para detectar positivos reales.\n",
+    "\n",
+    "F1-score: equilibrio entre precisión y recall.\n",
+    "\n",
+    "ROC-AUC: mide la capacidad general del modelo para discriminar entre las dos clases.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3c60896",
+   "metadata": {},
+   "source": [
+    "Como la variable objetivo es variable dicotómica (0 o 1), se acotan los modelos a usar:\n",
+    "| Tipo                              | Modelo                                     | Descripción                                                                                                                                                                                               |\n",
+    "| --------------------------------- | ------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |\n",
+    "| **Lineales**                      | **Regresión Logística**                    | Es el modelo base para variables binarias. Calcula la probabilidad de pertenecer a la clase positiva mediante una función sigmoide. Es interpretable y muy usado en banca, salud, riesgo crediticio, etc. |\n",
+    "| **No lineales (árboles)**         | **Árbol de Decisión**                      | Divide los datos según reglas lógicas (ej. “edad > 40”) hasta clasificar los casos. Intuitivo y explicable.                                                                                               |\n",
+    "| **Ensamblados (mayor precisión)** | **Random Forest**                          | Combina múltiples árboles para reducir el error de un solo árbol. Mejora estabilidad y generalización.                                                                                                    |\n",
+    "|                                   | **Gradient Boosting / XGBoost / LightGBM** | Ensambles secuenciales que optimizan el error del modelo previo. Ofrecen los mejores resultados predictivos en la mayoría de los problemas de clasificación binaria.                                      |\n",
+    "| **Basados en distancia**          | **K-Nearest Neighbors (KNN)**              | Clasifica según los *k* vecinos más cercanos. Sencillo, aunque sensible al ruido y escalado.                                                                                                              |\n",
+    "| **Margen máximo**                 | **Support Vector Machine (SVM)**           | Encuentra el hiperplano que mejor separa las clases. Muy eficaz en espacios con muchas variables.                                                                                                         |\n",
+    "| **Neurales**                      | **Perceptrón Multicapa (MLPClassifier)**   | Red neuronal capaz de aprender relaciones complejas y no lineales. Requiere más datos y cómputo.                                                                                                          |\n"
    ]
   }
  ],
