--- a/models/03_arbol_decision/03_arbol_decision.ipynb
+++ b/models/03_arbol_decision/03_arbol_decision.ipynb
@@ -238,6 +238,203 @@
     "print(classification_report(y_test, y_pred_thr, digits=4))\n",
     "print(\"Matriz de confusión (umbral custom):\\n\", confusion_matrix(y_test, y_pred_thr))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7a00254",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%\n",
+    "import nbformat as nbf\n",
+    "from pathlib import Path\n",
+    "\n",
+    "base = Path(\"/mnt/data\")\n",
+    "nb_path = base / \"01_logistic_regression_churn.ipynb\"\n",
+    "\n",
+    "nb = nbf.v4.new_notebook()\n",
+    "cells = []\n",
+    "\n",
+    "cells.append(nbf.v4.new_markdown_cell(\"\"\"\n",
+    "# Churn – Regresión Logística (Notebook 01)\n",
+    "\n",
+    "Este notebook entrena y evalúa **Regresión Logística** para predecir la variable binaria **`exited`** sobre el dataset procesado `Churn_Modelling-ETL 2.csv`.\n",
+    "\n",
+    "Incluye:\n",
+    "- Pipeline de preprocesamiento (OneHot + StandardScaler)\n",
+    "- Train/Test Split (estratificado)\n",
+    "- Métricas de **clasificación**: Accuracy, Precision, Recall, F1, ROC-AUC, Matriz de Confusión\n",
+    "- Gráficas con **Seaborn**: matriz de confusión, curva ROC, curva Precision–Recall y barras de métricas\n",
+    "\"\"\"))\n",
+    "\n",
+    "cells.append(nbf.v4.new_code_cell(\"\"\"\n",
+    "# Config y librerías\n",
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score, precision_score, recall_score, f1_score,\n",
+    "    roc_auc_score, confusion_matrix, roc_curve, precision_recall_curve\n",
+    ")\n",
+    "\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "BASE = Path(\"/mnt/data\")\n",
+    "DATA = BASE / \"Churn_Modelling-ETL 2.csv\"\n",
+    "\"\"\"))\n",
+    "\n",
+    "cells.append(nbf.v4.new_code_cell(\"\"\"\n",
+    "# Carga y preparación\n",
+    "df = pd.read_csv(DATA)\n",
+    "df.columns = [c.strip().replace(\" \", \"_\") for c in df.columns]  # snake_case\n",
+    "\n",
+    "target_col = \"exited\" if \"exited\" in df.columns else \"Exited\"\n",
+    "assert target_col in df.columns, \"No se encontró la columna objetivo ('exited' o 'Exited').\"\n",
+    "\n",
+    "drop_ids = [c for c in [\"row_number\", \"customer_id\", \"surname\", \"RowNumber\", \"CustomerId\", \"Surname\"] if c in df.columns]\n",
+    "X = df.drop(columns=[target_col] + drop_ids, errors=\"ignore\")\n",
+    "y = df[target_col].astype(int)\n",
+    "\n",
+    "cat_cols = [c for c in X.columns if X[c].dtype == \"object\"]\n",
+    "num_cols = [c for c in X.columns if c not in cat_cols]\n",
+    "\n",
+    "X.head(), y.value_counts(normalize=True)\n",
+    "\"\"\"))\n",
+    "\n",
+    "cells.append(nbf.v4.new_code_cell(\"\"\"\n",
+    "# Pipeline: preprocesamiento + modelo\n",
+    "preprocess = ColumnTransformer([\n",
+    "    (\"num\", StandardScaler(), num_cols),\n",
+    "    (\"cat\", OneHotEncoder(drop=\"first\", handle_unknown=\"ignore\"), cat_cols),\n",
+    "])\n",
+    "\n",
+    "logreg = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "\n",
+    "pipe = Pipeline([\n",
+    "    (\"prep\", preprocess),\n",
+    "    (\"clf\", logreg),\n",
+    "])\n",
+    "\"\"\"))\n",
+    "\n",
+    "cells.append(nbf.v4.new_code_cell(\"\"\"\n",
+    "# Train/Test split y entrenamiento\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.25, stratify=y, random_state=42\n",
+    ")\n",
+    "\n",
+    "pipe.fit(X_train, y_train)\n",
+    "\n",
+    "# Predicciones\n",
+    "y_prob = pipe.predict_proba(X_test)[:, 1]\n",
+    "y_pred = (y_prob >= 0.50).astype(int)\n",
+    "\n",
+    "# Métricas\n",
+    "acc  = accuracy_score(y_test, y_pred)\n",
+    "prec = precision_score(y_test, y_pred, zero_division=0)\n",
+    "rec  = recall_score(y_test, y_pred, zero_division=0)\n",
+    "f1   = f1_score(y_test, y_pred, zero_division=0)\n",
+    "auc  = roc_auc_score(y_test, y_prob)\n",
+    "cm   = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Accuracy     : {acc:.4f}\")\n",
+    "print(f\"Precision(1) : {prec:.4f}\")\n",
+    "print(f\"Recall(1)    : {rec:.4f}\")\n",
+    "print(f\"F1(1)        : {f1:.4f}\")\n",
+    "print(f\"ROC-AUC      : {auc:.4f}\")\n",
+    "print(\"Matriz de confusión:\\\\n\", cm)\n",
+    "\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    \"Métrica\": [\"Accuracy\",\"Precision\",\"Recall\",\"F1\",\"ROC-AUC\"],\n",
+    "    \"Valor\":   [acc, prec, rec, f1, auc]\n",
+    "})\n",
+    "metrics_df\n",
+    "\"\"\"))\n",
+    "\n",
+    "cells.append(nbf.v4.new_code_cell(\"\"\"\n",
+    "# Gráfica: Matriz de Confusión (Seaborn)\n",
+    "plt.figure(figsize=(5,4))\n",
+    "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\",\n",
+    "            xticklabels=[\"Pred 0\",\"Pred 1\"], yticklabels=[\"Real 0\",\"Real 1\"])\n",
+    "plt.title(\"Matriz de Confusión – Logistic Regression\")\n",
+    "plt.xlabel(\"Predicho\")\n",
+    "plt.ylabel(\"Real\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\"\"\"))\n",
+    "\n",
+    "cells.append(nbf.v4.new_code_cell(\"\"\"\n",
+    "# Gráfica: Curva ROC (Seaborn/Matplotlib)\n",
+    "fpr, tpr, _ = roc_curve(y_test, y_prob)\n",
+    "plt.figure(figsize=(6,4))\n",
+    "sns.lineplot(x=fpr, y=tpr)\n",
+    "sns.lineplot(x=[0,1], y=[0,1], linestyle=\"--\")\n",
+    "plt.title(f\"Curva ROC (AUC={auc:.3f}) – Logistic Regression\")\n",
+    "plt.xlabel(\"False Positive Rate\")\n",
+    "plt.ylabel(\"True Positive Rate\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\"\"\"))\n",
+    "\n",
+    "cells.append(nbf.v4.new_code_cell(\"\"\"\n",
+    "# Gráfica: Curva Precision–Recall (Seaborn)\n",
+    "precisions, recalls, _ = precision_recall_curve(y_test, y_prob)\n",
+    "plt.figure(figsize=(6,4))\n",
+    "sns.lineplot(x=recalls, y=precisions)\n",
+    "plt.title(\"Curva Precision–Recall – Logistic Regression\")\n",
+    "plt.xlabel(\"Recall\")\n",
+    "plt.ylabel(\"Precision\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\"\"\"))\n",
+    "\n",
+    "cells.append(nbf.v4.new_code_cell(\"\"\"\n",
+    "# Gráfica: Barras de métricas (Seaborn)\n",
+    "plt.figure(figsize=(6,4))\n",
+    "sns.barplot(data=metrics_df, x=\"Métrica\", y=\"Valor\")\n",
+    "plt.ylim(0,1)\n",
+    "plt.title(\"Métricas de Clasificación – Logistic Regression\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\"\"\"))\n",
+    "\n",
+    "cells.append(nbf.v4.new_code_cell(\"\"\"\n",
+    "# (Opcional) Ajuste de umbral para priorizar Recall\n",
+    "thr = 0.35  # ejemplo\n",
+    "y_pred_thr = (y_prob >= thr).astype(int)\n",
+    "\n",
+    "acc2  = accuracy_score(y_test, y_pred_thr)\n",
+    "prec2 = precision_score(y_test, y_pred_thr, zero_division=0)\n",
+    "rec2  = recall_score(y_test, y_pred_thr, zero_division=0)\n",
+    "f12   = f1_score(y_test, y_pred_thr, zero_division=0)\n",
+    "cm2   = confusion_matrix(y_test, y_pred_thr)\n",
+    "\n",
+    "display(pd.DataFrame({\n",
+    "    \"Métrica\": [\"Accuracy\",\"Precision\",\"Recall\",\"F1\"],\n",
+    "    \"Valor\":   [acc2, prec2, rec2, f12]\n",
+    "}))\n",
+    "\n",
+    "plt.figure(figsize=(5,4))\n",
+    "sns.heatmap(cm2, annot=True, fmt=\"d\", cmap=\"Oranges\",\n",
+    "            xticklabels=[\"Pred 0\",\"Pred 1\"], yticklabels=[\"Real 0\",\"Real 1\"])\n",
+    "plt.title(f\"Matriz de Confusión – Umbral {thr:.2f}\")\n",
+    "plt.xlabel(\"Predicho\")\n",
+    "plt.ylabel(\"Real\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\"\"\"))\n",
+    "\n",
+    "nb['cells'] = cells\n",
+    "nbf.write(nb, nb_path)\n",
+    "str(nb_path)\n"
+   ]
   }
  ],
  "metadata": {
