--- a/models/02_regresion_logistica/logistic_regression_churn.ipynb
+++ b/models/02_regresion_logistica/logistic_regression_churn.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Churn – Regresión Logística (Notebook 01)\n",
+    "# Churn – Regresión Logística\n",
     "\n",
     "Este notebook entrena y evalúa **Regresión Logística** para predecir la variable binaria **`exited`** sobre el dataset procesado `Churn_Modelling-ETL 2.csv`.\n",
     "\n",
@@ -387,7 +387,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
