--- a/models/arbol_decision/decision_tree_churn.ipynb
+++ b/models/arbol_decision/decision_tree_churn.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3ea2675a",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
     "    roc_auc_score, confusion_matrix, roc_curve, precision_recall_curve\n",
     ")\n",
     "\n",
-    "sns.set(style=\"whitegrid\")\n",
+    "sns.set_theme(style=\"whitegrid\")\n",
     "BASE = Path(\"../../\")\n",
     "DATA = BASE / \"Churn_Modelling-ETL 2.csv\"\n"
    ]
