--- a/models/regresion_logistica/logistic_regression_churn.ipynb
+++ b/models/regresion_logistica/logistic_regression_churn.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "db631291",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
     "    roc_auc_score, confusion_matrix, roc_curve, precision_recall_curve\n",
     ")\n",
     "\n",
-    "sns.set(style=\"whitegrid\")\n",
+    "sns.set_theme(style=\"whitegrid\")\n",
     "BASE = Path(\"../../\")\n",
     "DATA = BASE / \"Churn_Modelling-ETL 2.csv\"\n"
    ]
