--- a/models/gradient_boosting/gradient_boosting_churn.ipynb
+++ b/models/gradient_boosting/gradient_boosting_churn.ipynb
@@ -15,8 +15,7 @@
     "- Train/Test Split estratificado\n",
     "- Métricas de **clasificación**: Accuracy, Precision, Recall, F1, ROC-AUC, Matriz de Confusión\n",
     "- Gráficas con **Seaborn**: matriz de confusión, curva ROC, curva Precision–Recall y barras de métricas\n",
-    "- **Importancia de variables** (top 25)\n",
-    "- (Opcional) **ajuste de umbral** para priorizar Recall de churn\n"
+    "- **Importancia de variables** (top 25)\n"
    ]
   },
   {
